# search6

./: Cargo.toml  Dockerfile  LICENSE  README.md  cli.go  fly.toml
.github/workflows/: deploy.yml
src/: error.html  handlers.rs  health.html  index.html  main.rs  oauth.rs  reload.rs  scores.rs  style.css  util.rs
src/resources/: error.html  index.html  style.css
