[package]
name = "search6"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = { version = "0.22.3", default-features = false, features = ["ahash", "aio", "tokio-comp", "acl", "json"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.26", features = ["rt-multi-thread", "macros"] }
deadpool-redis = { version = "0.11.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tera = "1.18"
mee6 = "0.1"
axum = "0.6"
oauth2 = "4.3"
twilight-model = "0.15"
xpd-rank-card = "0.0.3"
base64 = "0.21"
serde_json = "1"
