[package]
name = "search6"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = { version = "0.22", default-features = false, features = ["ahash", "aio", "tokio-comp", "acl", "json", "cluster"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
twilight-util = { version = "0.15", features = ["builder", "link"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
deadpool-redis = { version = "0.11", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
twilight-validate = "0.15"
xpd-rank-card = "0.0.5"
twilight-model = "0.15"
twilight-http = "0.15"
thiserror = "1.0"
dotenvy = "0.15"
serde_json = "1"
tracing = "0.1"
base64 = "0.21"
oauth2 = "4.3"
tera = "1.18"
mee6 = "0.1"
axum = "0.6"
