[package]
name = "search6"
edition = "2021"
version = "0.1.0"

[dependencies]
axum = "0.6"
base64 = "0.21"
dotenvy = "0.15"
mee6 = "0.1"
oauth2 = "4.3"
serde_json = "1"
tera = "1.18"
thiserror = "1.0"
tracing = "0.1"
twilight-http = "0.15"
twilight-model = "0.15"
twilight-validate = "0.15"
xpd-rank-card = "0.1"

[dependencies.chrono]
version = "0.4"
default-features = false

[dependencies.deadpool-redis]
version = "0.11"
features = ["rt_tokio_1", "serde_1"]
optional = false
default-features = false

[dependencies.redis]
version = "0.23"
features = ["ahash", "aio", "tokio-comp", "acl", "json", "cluster"]
optional = false
default-features = false

[dependencies.reqwest]
version = "0.11"
features = ["json", "rustls-tls"]
optional = false
default-features = false

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = false

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros"]
optional = false

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]
optional = false

[dependencies.twilight-util]
version = "0.15"
features = ["builder", "link"]
optional = false
